--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
+version: "3"
+
 services:
   3xui:
-    build:
-      context: .
-      dockerfile: ./Dockerfile
+    image: ghcr.io/mhsanaei/3x-ui:v2.0.2
     container_name: 3xui_app
-    # hostname: yourhostname <- optional
     volumes:
-      - $PWD/db/:/etc/x-ui/
-      - $PWD/cert/:/root/cert/
+      - ./db/:/etc/x-ui/
+      - ./cert/:/root/cert/
     environment:
       XRAY_VMESS_AEAD_FORCED: "false"
       XUI_ENABLE_FAIL2BAN: "true"
